# EE368_Final_Project

./: CMakeLists.txt  README.md  package.xml
include/project/: ArmControl.h
launch/: 3D_paint.launch
script/: ArmControl.py  gen_circle.py  gen_path.py  lqr.py  test.py  waypoint.py
src/: ArmControl.cpp  arm_node.cpp  gen_path_node.cpp
